# FileMorph

./: .env.example  .gitattributes  .gitignore  .gitleaksignore  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  babel.cfg  create-shortcut.ps1  dev.ps1  docker-compose.cloud.yml  docker-compose.office.yml  docker-compose.yml  entrypoint.sh  filemorph.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  start.bat  start.sh  tailwind.config.js
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
alembic/: env.py  script.py.mako
app/: compat.py  main.py
docs/: agpl-fuer-behoerden.md  api-reference.md  api-usage-guide.md  architecture.md  commercial-license-agreement-template.md  development.md  dpa-template.md  dpa-tom-annex.md  email-setup.md  engineering-pm-assessment.md  formats.md  gdpr-account-deletion-design.md  gdpr-privacy-analysis.md  incident-response.md  installation.md  onboarding.md  patch-policy.md  pii-redaction.md  records-of-processing-template.md  release-signing.md  security-overview.md  security-pentest-report.md  self-hosting.md  sprint-s1-technology-first.md  sub-processors.md  support-sla.md  tailwind-build-setup.md  tech-stack-rationale.md  third-party-licenses.md  threat-model.md  vendor-security-questionnaire.md
locale/: messages.pot
scripts/: audit_seo_basics.py  bench_conversions.py  build-tailwind.sh  check_template_classes.py  first_run.py  generate_api_key.py  generate_og_image.py  i18n.py  launch_gate_check.py  promote_admin.py  (+2 more)
(+223 files in other folders)
